# tufa

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml  release.yml  rust.yml
src/: app.rs  cli.rs  clipboard.rs  main.rs  migration.rs  totp.rs  totp_uri.rs  ui.rs  vault.rs
src/screen/: account_list.rs  confirm.rs  export.rs  mod.rs  notification.rs  password.rs  search.rs  vault_list.rs
