[package]
name = "tufa-rs"
version = "0.5.10"
edition = "2024"
description = "A terminal-based TOTP authenticator"
license = "MIT"
repository = "https://github.com/gnoega/tufa"
categories = ["command-line-utilities", "authentication"]
keywords = ["totp", "2fa", "tui", "authenticator", "security"]

[[bin]]
name = "tufa"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base32 = "0.5.1"
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
image = "0.25.10"
prost = "0.14.3"
qrcode = "0.14.1"
ratatui = "0.30.0"
rpassword = "7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.26.0"
totp-rs = "5.7.0"
urlencoding = "2.1.3"
zeroize = { version = "1.8.2", features = ["derive"] }
